fix button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ input:checked + .slider:before {
 .show_info .not_this{
 	position: absolute;
 	bottom: 5px;
-	right: 5px;
+	right: 0px;
 }
 
 
@@ -101,6 +101,9 @@ input:checked + .slider:before {
 	font-size: 18px;
 	color: #767;
 	padding: 0px;
+}
+.file_list th #update-all {
+	padding-right: -10px !important;
 }
 .file_list td {
 	font-size: 15px;
